- Fixed the 'go' command: resets dash/sprint status, and lets unknown 'go'
  commands go to Imperian. Builders rejoice.
- Improved title recognizing. Builders rejoice again.
- The 'map' command now shows various useful things while mapping.
- New environments can be created with the 'survey' command.
- 'room create' was deleted, after being merged into 'map create newroom'.
- 'exit unilink' can now be used without an argument, to create an
  unidirectional exit while at the same time creating a new room.
- Useless commands removed: 'map remake', 'area create'.
- 'room destroy', 'room merge', and 'map load', will no longer leave gaps
  in the vnum number interval.
(IOffense:)
- Stripped the iScript out of here, into its own module.
- Moved the 'grep' command to the other mod, to clear the pcre requirement.
(IScript:)
- Complete rewrite of the iScript parser.
(MMChat:)
- Removed entirely!
(ILua:)
- Created... yes, entirely!



IMTS-6
=============

(MudBot:)
- Completely rewritten the way lines/prompts are parsed and sent to the
  modules for processing.
- Also rewritten the way telnet subnegotiation is processed. MudBot is now
  almost fully compatible with Nexus.
- MXP made a tiny bit more compatible for MushClient.
- MCCP starting on the same packet that stopped it, fixed. Editing journals
  or scrolls should no longer be buggy.
- Crash logs have more info on them.
(Imperian:)
- Rat/spider worth parsing is working again, also added caiman, serpents
  and locusts.
- Impatience should stop trying to focus.
- Defences can be marked to be brought up only once. Use 'once' instead of
  'on' in the options file.
- Option 'perma_moss' added.
(IMapper:)
- Autolinking added, and enabled by default. Added an option to disable it.
- Floating MXP map window added. Warning, Zmud acts buggy about it.
- Duplicate room detection while mapping, added.
- Merging of two identic rooms (duplicate) into one, added.